@@ -24,17 +24,18 @@
  */
 package jdk.graal.compiler.truffle.test;
 
+import java.io.IOException;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import com.oracle.truffle.api.test.SubprocessTestUtils;
 import org.graalvm.collections.EconomicMap;
 import org.graalvm.polyglot.Context;
 import org.junit.Assert;
@@ -49,6 +50,7 @@ import com.oracle.truffle.api.CompilerDirectives;
 import com.oracle.truffle.api.CompilerDirectives.TruffleBoundary;
 import com.oracle.truffle.api.HostCompilerDirectives.BytecodeInterpreterSwitch;
 import com.oracle.truffle.api.HostCompilerDirectives.InliningCutoff;
+import com.oracle.truffle.api.HostCompilerDirectives.InliningRoot;
 import com.oracle.truffle.api.Truffle;
 import com.oracle.truffle.api.dsl.Cached;
 import com.oracle.truffle.api.dsl.ImplicitCast;
@@ -62,6 +64,8 @@ import com.oracle.truffle.api.profiles.InlinedCountingConditionProfile;
 import com.oracle.truffle.runtime.OptimizedCallTarget;
 import com.oracle.truffle.runtime.OptimizedDirectCallNode;
 
+import jdk.graal.compiler.annotation.AnnotationValue;
+import jdk.graal.compiler.annotation.AnnotationValueSupport;
 import jdk.graal.compiler.api.directives.GraalDirectives;
 import jdk.graal.compiler.core.phases.HighTier;
 import jdk.graal.compiler.debug.DebugContext;
@@ -104,66 +108,86 @@ public class HostInliningTest extends TruffleCompilerImplTest {
 
     @Parameters(name = "{0}")
     public static List<TestRun> data() {
-        return Arrays.asList(TestRun.DEFAULT);
+        return List.of(TestRun.DEFAULT);
     }
 
     @Test
-    public void test() {
-        runTest("testBasicInlining");
-        runTest("testDominatedDeopt");
-        runTest("testTruffleBoundary");
-        runTest("testPropagateDeopt");
-        runTest("testPropagateDeoptTwoLevels");
-        runTest("testRecursive");
-        runTest("testNotExplorable");
-        runTest("testBecomesDirectAfterInline");
-        runTest("testVirtualCall");
-        runTest("testInInterpreter1");
-        runTest("testInInterpreter2");
-        runTest("testInInterpreter3");
-        runTest("testInInterpreter4");
-        runTest("testInInterpreter5");
-        runTest("testInInterpreter6");
-        runTest("testInInterpreter7");
-        runTest("testInInterpreter8");
-        runTest("testInInterpreter9");
-        runTest("testInInterpreter10");
-        runTest("testInInterpreter11");
-        runTest("testInInterpreter12");
-        runTest("testExplorationDepth0");
-        runTest("testExplorationDepth1");
-        runTest("testExplorationDepth2");
-        runTest("testExplorationDepth0Fail");
-        runTest("testExplorationDepth1Fail");
-        runTest("testExplorationDepth2Fail");
-        runTest("testBytecodeSwitchtoBytecodeSwitch");
-        runTest("testInliningCutoff");
-        runTest("testNonDirectCalls");
-        runTest("testConstantFolding");
-        runTest("testDirectIntrinsics");
-        runTest("testIndirectIntrinsics");
-        runTest("testCountingConditionProfile");
-        runTest("testInterpreterCaller");
-        runTest("testIndirectThrow");
-        runTest("testThrow");
-        runTest("testRangeCheck");
-        runTest("testImplicitCast");
-        runTest("testNativeCall");
+    public void test() throws IOException, InterruptedException {
+        SubprocessTestUtils.newBuilder(HostInliningTest.class, () -> {
+            runTest("testBasicInlining");
+            runTest("testDominatedDeopt");
+            runTest("testTruffleBoundary");
+            runTest("testPropagateDeopt");
+            runTest("testPropagateDeoptTwoLevels");
+            runTest("testRecursive");
+            runTest("testNotExplorable");
+            runTest("testBecomesDirectAfterInline");
+            runTest("testVirtualCall");
+            runTest("testInInterpreter1");
+            runTest("testInInterpreter2");
+            runTest("testInInterpreter3");
+            runTest("testInInterpreter4");
+            runTest("testInInterpreter5");
+            runTest("testInInterpreter6");
+            runTest("testInInterpreter7");
+            runTest("testInInterpreter8");
+            runTest("testInInterpreter9");
+            runTest("testInInterpreter10");
+            runTest("testInInterpreter11");
+            runTest("testInInterpreter12");
+            runTest("testExplorationDepth0");
+            runTest("testExplorationDepth1");
+            runTest("testExplorationDepth2");
+            runTest("testExplorationDepth0Fail");
+            runTest("testExplorationDepth1Fail");
+            runTest("testExplorationDepth2Fail");
+            runTest("testBytecodeSwitchtoBytecodeSwitch");
+            runTest("testInliningCutoff");
+            runTest("testNonDirectCalls");
+            runTest("testConstantFolding");
+            runTest("testDirectIntrinsics");
+            runTest("testIndirectIntrinsics");
+            runTest("testCountingConditionProfile");
+            runTest("testInterpreterCaller");
+            runTest("testIndirectThrow");
+            runTest("testThrow");
+            runTest("testRangeCheck");
+            runTest("testImplicitCast");
+            runTest("testNativeCall");
+            runTest("testBCDSLPrologIfVersion");
+            runTest("testInliningRoot");
+        }).parameterizedBy(run).run();
     }
 
+    /*
+     * Test for GR-69170
+     */
+    @BytecodeInterpreterSwitch
+    static Object testBCDSLPrologIfVersion(@SuppressWarnings("unused") int value) {
+        Object o = null;
+        if (!CompilerDirectives.inInterpreter() && CompilerDirectives.hasNextTier()) {
+            GraalDirectives.deoptimize();
+            o = new Object();
+        }
+        // must be inlined
+        trivialMethod();
+        return o;
+    }
+
+    @SuppressWarnings("unchecked")
     void runTest(String methodName) {
         // initialize the Truffle runtime to ensure that all intrinsics are applied
         Truffle.getRuntime();
 
         ResolvedJavaMethod method = getResolvedJavaMethod(methodName);
-        ExplorationDepth depth = method.getAnnotation(ExplorationDepth.class);
+        AnnotationValue depth = AnnotationValueSupport.getAnnotationValue(method, ExplorationDepth.class);
         int explorationDepth = -1;
         if (depth != null) {
-            explorationDepth = depth.value();
+            explorationDepth = depth.getInt("value");
         }
 
-        NodeCostLimit nodeCostLimit = method.getAnnotation(NodeCostLimit.class);
-        OptionValues options = createHostInliningOptions(nodeCostLimit != null ? nodeCostLimit.value() : NODE_COST_LIMIT, explorationDepth);
+        AnnotationValue nodeCostLimit = AnnotationValueSupport.getAnnotationValue(method, NodeCostLimit.class);
+        OptionValues options = createHostInliningOptions(nodeCostLimit != null ? nodeCostLimit.getInt("value") : NODE_COST_LIMIT, explorationDepth);
         StructuredGraph graph = parseForCompile(method, options);
         try {
             // call it so all method are initialized
@@ -186,16 +210,17 @@ public class HostInliningTest extends TruffleCompilerImplTest {
             }
             new HostInliningPhase(canonicalizer).apply(graph, context);
 
-            ExpectNotInlined notInlined = method.getAnnotation(ExpectNotInlined.class);
-            ExpectSameGraph sameGraph = method.getAnnotation(ExpectSameGraph.class);
+            AnnotationValue notInlined = AnnotationValueSupport.getAnnotationValue(method, ExpectNotInlined.class);
+            AnnotationValue sameGraph = AnnotationValueSupport.getAnnotationValue(method, ExpectSameGraph.class);
 
             if (sameGraph != null) {
-                ResolvedJavaMethod compareMethod = getResolvedJavaMethod(sameGraph.value());
+                ResolvedJavaMethod compareMethod = getResolvedJavaMethod(sameGraph.getString("value"));
                 StructuredGraph compareGraph = parseForCompile(compareMethod, options);
                 assertEquals(compareGraph, graph);
             }
 
-            assertInvokesFound(graph, notInlined != null ? notInlined.name() : null, notInlined != null ? notInlined.count() : null);
+            assertInvokesFound(graph, notInlined != null ? (List<String>) notInlined.get("name", List.class) : null,
+                            notInlined != null ? (List<Integer>) notInlined.get("count", List.class) : null);
 
         } catch (Throwable e) {
             graph.getDebug().dump(DebugContext.BASIC_LEVEL, graph, "error graph");
@@ -232,7 +257,7 @@ public class HostInliningTest extends TruffleCompilerImplTest {
         });
     }
 
-    public static void assertInvokesFound(StructuredGraph graph, String[] notInlined, int[] counts) {
+    public static void assertInvokesFound(StructuredGraph graph, List<String> notInlined, List<Integer> counts) {
         Map<String, Integer> found = new EconomicHashMap<>();
         List<Invoke> invokes = new ArrayList<>();
         invokes.addAll(graph.getNodes().filter(InvokeNode.class).snapshot());
@@ -243,10 +268,10 @@ public class HostInliningTest extends TruffleCompilerImplTest {
             if (notInlined == null) {
                 Assert.fail("Unexpected node type found in the graph: " + invoke);
             } else {
-                for (int i = 0; i < notInlined.length; i++) {
-                    String expectedMethodName = notInlined[i];
+                for (int i = 0; i < notInlined.size(); i++) {
+                    String expectedMethodName = notInlined.get(i);
                     if (expectedMethodName.equals(invokedMethod.getName())) {
-                        int expectedCount = counts[i];
+                        int expectedCount = counts.get(i);
                         int currentCount = found.getOrDefault(invokedMethod.getName(), 0);
                         if (expectedCount >= 0) {
                             currentCount++;
@@ -259,13 +284,13 @@ public class HostInliningTest extends TruffleCompilerImplTest {
                         continue invoke;
                     }
                 }
-                Assert.fail("Unexpected invoke found " + invoke + ". Expected one of " + Arrays.toString(notInlined));
+                Assert.fail("Unexpected invoke found " + invoke + ". Expected one of " + notInlined);
             }
         }
         if (notInlined != null) {
-            for (int i = 0; i < notInlined.length; i++) {
-                String expectedMethodName = notInlined[i];
-                int expectedCount = counts[i];
+            for (int i = 0; i < notInlined.size(); i++) {
+                String expectedMethodName = notInlined.get(i);
+                int expectedCount = counts.get(i);
                 int currentCount = found.getOrDefault(expectedMethodName, 0);
                 if (expectedCount >= 0 && currentCount < expectedCount) {
                     Assert.fail("Expected " + expectedCount + " calls to " + expectedMethodName + " but got " + currentCount + ".");
@@ -984,6 +1009,13 @@ public class HostInliningTest extends TruffleCompilerImplTest {
 
     static int testIndirectIntrinsicsImpl(A a) {
         return a.intrinsic(); // inlined and intrinsic
+    }
+
+    @InliningRoot
+    static int testInliningRoot(int value) {
+        // should work just like bytecode interpreter switches
+        trivialMethod();
+        return value;
     }
 
     @Retention(RetentionPolicy.RUNTIME)
