@@ -32,7 +32,6 @@ import static jdk.vm.ci.code.ValueUtil.isRegister;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.BitSet;
 import java.util.List;
 
 import org.graalvm.collections.Pair;
@@ -43,6 +42,8 @@ import jdk.graal.compiler.core.common.alloc.RegisterAllocationConfig;
 import jdk.graal.compiler.core.common.cfg.BasicBlock;
 import jdk.graal.compiler.core.common.cfg.BlockMap;
 import jdk.graal.compiler.debug.Assertions;
+import jdk.graal.compiler.debug.CounterKey;
+import jdk.graal.compiler.debug.DebugCloseable;
 import jdk.graal.compiler.debug.DebugContext;
 import jdk.graal.compiler.debug.GraalError;
 import jdk.graal.compiler.debug.Indent;
@@ -75,10 +76,49 @@ import jdk.vm.ci.meta.Value;
  */
 public class LinearScan {
 
+    protected boolean isDetailedAsserts() {
+        return Assertions.assertionsEnabled() && detailedAsserts;
+    }
+
+    /**
+     * These timers can significantly affect the speed of linear scan so they are disabled by
+     * default.
+     */
+    static final boolean DETAILED_TIMERS = false;
+
+    static CounterKey counter(String name) {
+        if (DETAILED_TIMERS) {
+            return DebugContext.counter(name);
+        }
+        return null;
+    }
+
+    static DebugContext.CountingTimerKey countingTimer(String name) {
+        if (DETAILED_TIMERS) {
+            return DebugContext.countingTimer(name);
+        }
+        return null;
+    }
+
+    DebugCloseable start(DebugContext.CountingTimerKey key) {
+        if (key != null) {
+            return key.start(debug);
+        }
+        return null;
+    }
+
+    void increment(CounterKey key) {
+        if (key != null) {
+            key.increment(debug);
+        }
+    }
+
     public static class Options {
         // @formatter:off
         @Option(help = "Enable spill position optimization", type = OptionType.Debug)
         public static final OptionKey<Boolean> LIROptLSRAOptimizeSpillPosition = new NestedBooleanOptionKey(LIRPhase.Options.LIROptimization, true);
+        @Option(help = "Use binary search if interval is longer than this limit", type = OptionType.Debug)
+        public static final OptionKey<Integer> IntervalBinarySearchLimit = new OptionKey<>(100);
         // @formatter:on
     }
 
@@ -90,7 +130,7 @@ public class LinearScan {
          * block. The bit index of an operand is its {@linkplain LinearScan#operandNumber(Value)
          * operand number}.
          */
-        public BitSet liveIn;
+        public SparseBitSet liveIn;
 
         /**
          * Bit map specifying which operands are live upon exit from this block. These are values
@@ -98,20 +138,26 @@ public class LinearScan {
          * to this block. The bit index of an operand is its
          * {@linkplain LinearScan#operandNumber(Value) operand number}.
          */
-        public BitSet liveOut;
+        public SparseBitSet liveOut;
 
         /**
          * Bit map specifying which operands are used (before being defined) in this block. That is,
          * these are the values that are live upon entry to the block. The bit index of an operand
          * is its {@linkplain LinearScan#operandNumber(Value) operand number}.
          */
-        public BitSet liveGen;
+        public SparseBitSet liveGen;
 
         /**
          * Bit map specifying which operands are defined/overwritten in this block. The bit index of
          * an operand is its {@linkplain LinearScan#operandNumber(Value) operand number}.
          */
-        public BitSet liveKill;
+        public SparseBitSet liveKill;
+
+        /**
+         * State used during {@link LinearScanLifetimeAnalysisPhase#computeGlobalLiveSets()} to
+         * create a worklist.
+         */
+        boolean dirty = true;
     }
 
     public static final int DOMINATOR_SPILL_MOVE_ID = -2;
@@ -160,14 +206,14 @@ public class LinearScan {
     private Interval[] sortedIntervals;
 
     /**
-     * Map from an instruction {@linkplain LIRInstruction#id id} to the instruction. Entries should
-     * be retrieved with {@link #instructionForId(int)} as the id is not simply an index into this
-     * array.
+     * Map from an instruction {@linkplain LIRInstruction#id() id} to the instruction. Entries
+     * should be retrieved with {@link #instructionForId(int)} as the id is not simply an index into
+     * this array.
      */
     private LIRInstruction[] opIdToInstructionMap;
 
     /**
-     * Map from an instruction {@linkplain LIRInstruction#id id} to the {@linkplain BasicBlock
+     * Map from an instruction {@linkplain LIRInstruction#id() id} to the {@linkplain BasicBlock
      * block} containing the instruction. Entries should be retrieved with {@link #blockForId(int)}
      * as the id is not simply an index into this array.
      */
@@ -187,9 +233,9 @@ public class LinearScan {
      * Sentinel interval to denote the end of an interval list.
      */
     protected final Interval intervalEndMarker;
-    public final Range rangeEndMarker;
-    public final boolean detailedAsserts;
+    private final boolean detailedAsserts;
     private final LIRGenerationResult res;
+    public final int intervalBinarySearchLimit;
 
     @SuppressWarnings("this-escape")
     protected LinearScan(TargetDescription target, LIRGenerationResult res, MoveFactory spillMoveFactory, RegisterAllocationConfig regAllocConfig, int[] sortedBlocks,
@@ -208,10 +254,10 @@ public class LinearScan {
         this.numVariables = ir.numVariables();
         this.blockData = new BlockMap<>(ir.getControlFlowGraph());
         this.neverSpillConstants = neverSpillConstants;
-        this.rangeEndMarker = new Range(Integer.MAX_VALUE, Integer.MAX_VALUE, null);
-        this.intervalEndMarker = new Interval(Value.ILLEGAL, Interval.END_MARKER_OPERAND_NUMBER, null, rangeEndMarker);
+        this.intervalEndMarker = new Interval(Value.ILLEGAL, Interval.END_MARKER_OPERAND_NUMBER, null);
         this.intervalEndMarker.next = intervalEndMarker;
         this.detailedAsserts = Assertions.detailedAssertionsEnabled(ir.getOptions());
+        this.intervalBinarySearchLimit = Options.IntervalBinarySearchLimit.getValue(ir.getOptions());
     }
 
     /**
@@ -222,7 +268,7 @@ public class LinearScan {
      *         describes a register
      */
     public int getVariableNumber(int operand) {
-        // check if its a variable
+        // check if it's a variable
         if (operand >= firstVariableNumber) {
             return operand - firstVariableNumber;
         }
@@ -243,14 +289,14 @@ public class LinearScan {
     }
 
     public int getFirstLirInstructionId(BasicBlock<?> block) {
-        int result = ir.getLIRforBlock(block).get(0).id();
+        int result = ir.getLIRforBlock(block).getFirst().id();
         assert NumUtil.assertNonNegativeInt(result);
         return result;
     }
 
     public int getLastLirInstructionId(BasicBlock<?> block) {
         ArrayList<LIRInstruction> instructions = ir.getLIRforBlock(block);
-        int result = instructions.get(instructions.size() - 1).id();
+        int result = instructions.getLast().id();
         assert NumUtil.assertNonNegativeInt(result);
         return result;
     }
@@ -368,7 +414,7 @@ public class LinearScan {
     Interval createInterval(AllocatableValue operand) {
         assert isLegal(operand);
         int operandNumber = operandNumber(operand);
-        Interval interval = new Interval(operand, operandNumber, intervalEndMarker, rangeEndMarker);
+        Interval interval = new Interval(operand, operandNumber, intervalEndMarker);
         assert operandNumber < intervalsSize : operandNumber + " " + intervalsSize;
         assert intervals[operandNumber] == null;
         intervals[operandNumber] = interval;
@@ -461,7 +507,7 @@ public class LinearScan {
     }
 
     /**
-     * Converts an {@linkplain LIRInstruction#id instruction id} to an instruction index. All LIR
+     * Converts an {@linkplain LIRInstruction#id() instruction id} to an instruction index. All LIR
      * instructions in a method have an index one greater than their linear-scan order predecessor
      * with the first instruction having an index of 0.
      */
@@ -470,10 +516,10 @@ public class LinearScan {
     }
 
     /**
-     * Retrieves the {@link LIRInstruction} based on its {@linkplain LIRInstruction#id id}.
+     * Retrieves the {@link LIRInstruction} based on its {@linkplain LIRInstruction#id() id}.
      *
-     * @param opId an instruction {@linkplain LIRInstruction#id id}
-     * @return the instruction whose {@linkplain LIRInstruction#id} {@code == id}
+     * @param opId an instruction {@linkplain LIRInstruction#id() id}
+     * @return the instruction whose {@linkplain LIRInstruction#id()} {@code == id}
      */
     public LIRInstruction instructionForId(int opId) {
         assert isEven(opId) : "opId not even";
@@ -485,7 +531,7 @@ public class LinearScan {
     /**
      * Gets the block containing a given instruction.
      *
-     * @param opId an instruction {@linkplain LIRInstruction#id id}
+     * @param opId an instruction {@linkplain LIRInstruction#id() id}
      * @return the block containing the instruction denoted by {@code opId}
      */
     public BasicBlock<?> blockForId(int opId) {
@@ -500,7 +546,7 @@ public class LinearScan {
     /**
      * Determines if an {@link LIRInstruction} destroys all caller saved registers.
      *
-     * @param opId an instruction {@linkplain LIRInstruction#id id}
+     * @param opId an instruction {@linkplain LIRInstruction#id() id}
      * @return {@code true} if the instruction denoted by {@code id} destroys all caller saved
      *         registers.
      */
@@ -740,14 +786,14 @@ public class LinearScan {
 
                 sortIntervalsAfterAllocation();
 
-                if (detailedAsserts) {
+                if (isDetailedAsserts()) {
                     verify();
                 }
                 beforeSpillMoveElimination();
                 createSpillMoveEliminationPhase().apply(target, lirGenRes, context);
                 createAssignLocationsPhase().apply(target, lirGenRes, context);
 
-                if (detailedAsserts) {
+                if (isDetailedAsserts()) {
                     verifyIntervals();
                 }
             } catch (Throwable e) {
@@ -855,14 +901,14 @@ public class LinearScan {
                     throw new GraalError("");
                 }
 
-                if (i1.first().isEndMarker()) {
+                if (i1.isEmpty()) {
                     debug.log("Interval %d has no Range", i1.operandNumber);
                     debug.log(i1.logString(this));
                     throw new GraalError("");
                 }
 
-                for (Range r = i1.first(); !r.isEndMarker(); r = r.next) {
-                    if (r.from >= r.to) {
+                for (Interval.RangeIterator r = new Interval.RangeIterator(i1); !r.isAtEnd(); r.next()) {
+                    if (r.from() >= r.to()) {
                         debug.log("Interval %d has zero length range", i1.operandNumber);
                         debug.log(i1.logString(this));
                         throw new GraalError("");
