@@ -49,7 +49,9 @@ import java.util.Set;
 import java.util.WeakHashMap;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.Callable;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Future;
 import java.util.concurrent.LinkedBlockingDeque;
 import java.util.concurrent.PriorityBlockingQueue;
 import java.util.concurrent.RejectedExecutionException;
@@ -59,6 +61,8 @@ import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Consumer;
+
+import com.oracle.truffle.runtime.CompilationTask.ExecutorServiceWrapper;
 
 /**
  * The compilation queue accepts compilation requests, and schedules compilations.
@@ -74,8 +78,7 @@ public class BackgroundCompileQueue {
 
     protected final OptimizedTruffleRuntime runtime;
     private final AtomicLong idCounter;
-    private volatile ThreadPoolExecutor compilationExecutorService;
-    private volatile BlockingQueue<Runnable> compilationQueue;
+    private volatile TruffleThreadPoolExecutor executor;
     private boolean shutdown = false;
     private long delayMillis;
 
@@ -91,12 +94,13 @@ public class BackgroundCompileQueue {
     }
 
     private ExecutorService getExecutorService(OptimizedCallTarget callTarget) {
-        ExecutorService service = this.compilationExecutorService;
+        ExecutorService service = this.executor;
         if (service != null) {
             return service;
         }
+
         synchronized (this) {
-            service = this.compilationExecutorService;
+            service = this.executor;
             if (service != null) {
                 return service;
             }
@@ -146,10 +150,25 @@ public class BackgroundCompileQueue {
             long compilerIdleDelay = runtime.getCompilerIdleDelay(callTarget);
             long keepAliveTime = compilerIdleDelay >= 0 ? compilerIdleDelay : 0;
 
-            this.compilationQueue = createQueue(callTarget, threads);
-            ThreadPoolExecutor threadPoolExecutor = new TruffleThreadPoolExecutor(threads, threads,
+            BlockingQueue<Runnable> queue;
+            if (callTarget.getOptionValue(OptimizedRuntimeOptions.TraversingCompilationQueue)) {
+                queue = new TraversingBlockingQueue(new IdlingLinkedBlockingDeque<>());
+            } else {
+                queue = new IdlingPriorityBlockingQueue<>();
+            }
+
+            DynamicCompilationThresholds dynamicCompilationThresholds = null;
+            if (callTarget.getOptionValue(OptimizedRuntimeOptions.TraversingCompilationQueue)) {
+                if (callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholds) && callTarget.getOptionValue(OptimizedRuntimeOptions.BackgroundCompilation)) {
+                    double minScale = callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholdsMinScale);
+                    int minNormalLoad = callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholdsMinNormalLoad);
+                    int maxNormalLoad = callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholdsMaxNormalLoad);
+                    dynamicCompilationThresholds = new DynamicCompilationThresholds(threads, minScale, minNormalLoad, maxNormalLoad);
+                }
+            }
+            TruffleThreadPoolExecutor threadPoolExecutor = new TruffleThreadPoolExecutor(threads, threads,
                             keepAliveTime, TimeUnit.MILLISECONDS,
-                            compilationQueue, factory);
+                            queue, factory, dynamicCompilationThresholds);
 
             if (compilerIdleDelay > 0) {
                 // There are two mechanisms to signal idleness: if core threads can timeout, then
@@ -158,22 +177,7 @@ public class BackgroundCompileQueue {
                 threadPoolExecutor.allowCoreThreadTimeOut(true);
             }
 
-            return compilationExecutorService = threadPoolExecutor;
-        }
-    }
-
-    private BlockingQueue<Runnable> createQueue(OptimizedCallTarget callTarget, int threads) {
-        if (callTarget.getOptionValue(OptimizedRuntimeOptions.TraversingCompilationQueue)) {
-            if (callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholds) && callTarget.getOptionValue(OptimizedRuntimeOptions.BackgroundCompilation)) {
-                double minScale = callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholdsMinScale);
-                int minNormalLoad = callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholdsMinNormalLoad);
-                int maxNormalLoad = callTarget.getOptionValue(OptimizedRuntimeOptions.DynamicCompilationThresholdsMaxNormalLoad);
-                return new DynamicThresholdsQueue(threads, minScale, minNormalLoad, maxNormalLoad, new IdlingLinkedBlockingDeque<>());
-            } else {
-                return new TraversingBlockingQueue(new IdlingLinkedBlockingDeque<>());
-            }
-        } else {
-            return new IdlingPriorityBlockingQueue<>();
+            return executor = threadPoolExecutor;
         }
     }
 
@@ -182,29 +186,42 @@ public class BackgroundCompileQueue {
         return new TruffleCompilerThreadFactory(threadNamePrefix, runtime);
     }
 
-    private CompilationTask submitTask(CompilationTask compilationTask) {
-        compilationTask.setFuture(getExecutorService(compilationTask.targetRef.get()).submit(compilationTask));
+    private CompilationTask submitTask(CompilationTask compilationTask, OptimizedCallTarget target) {
+        ExecutorService e = getExecutorService(target);
+        compilationTask.setFuture(e.submit(compilationTask));
         return compilationTask;
     }
 
     public CompilationTask submitCompilation(Priority priority, OptimizedCallTarget target) {
         final WeakReference<OptimizedCallTarget> targetReference = new WeakReference<>(target);
         CompilationTask compilationTask = CompilationTask.createCompilationTask(priority, targetReference, nextId());
-        return submitTask(compilationTask);
+        return submitTask(compilationTask, target);
     }
 
     public CompilationTask submitInitialization(OptimizedCallTarget target, Consumer<CompilationTask> action) {
         final WeakReference<OptimizedCallTarget> targetReference = new WeakReference<>(target);
         CompilationTask initializationTask = CompilationTask.createInitializationTask(targetReference, action);
-        return submitTask(initializationTask);
+        return submitTask(initializationTask, target);
     }
 
     private long nextId() {
         return idCounter.getAndIncrement();
     }
 
+    /**
+     * Flushes and cancels all compilations in the queue at the next opportunity. This also includes
+     * currently active compilations.
+     */
+    public final void flush(EngineData engine) {
+        TruffleThreadPoolExecutor e = this.executor;
+        if (e == null) {
+            return;
+        }
+        e.flush(engine);
+    }
+
     public int getQueueSize() {
-        final ThreadPoolExecutor threadPool = compilationExecutorService;
+        final ThreadPoolExecutor threadPool = executor;
         if (threadPool != null) {
             return threadPool.getQueue().size();
         } else {
@@ -218,36 +235,61 @@ public class BackgroundCompileQueue {
      * otherwise only the call targets belonging to {@code engine} will be returned.
      */
     public Collection<OptimizedCallTarget> getQueuedTargets(EngineData engine) {
-        BlockingQueue<Runnable> queue = this.compilationQueue;
-        if (queue == null) {
-            // queue not initialized
-            return Collections.emptyList();
+        TruffleThreadPoolExecutor e = this.executor;
+        if (e == null) {
+            return List.of();
         }
-        List<OptimizedCallTarget> queuedTargets = new ArrayList<>();
-        CompilationTask.ExecutorServiceWrapper[] array = queue.toArray(new CompilationTask.ExecutorServiceWrapper[0]);
-        for (CompilationTask.ExecutorServiceWrapper wrapper : array) {
-            OptimizedCallTarget target = wrapper.compileTask.targetRef.get();
-            if (target != null && (engine == null || target.engine == engine)) {
-                queuedTargets.add(target);
-            }
-        }
-        return Collections.unmodifiableCollection(queuedTargets);
+        return e.getQueuedTargets(engine);
     }
 
+    /**
+     * Return all call targets currently active or in the queue. This does also include all call
+     * targets being compiled. This method guarantees that all call targets either active or queued
+     * are returned and no targets are missed that are currently about to be compiled. If
+     * {@code engine} is {@code null}, the call targets for all engines are returned, otherwise only
+     * the call targets belonging to {@code engine} will be returned.
+     */
+    public Collection<OptimizedCallTarget> getAllTargets(EngineData engine) {
+        TruffleThreadPoolExecutor e = this.executor;
+        if (e == null) {
+            return List.of();
+        }
+        return e.getAllTargets(engine);
+    }
+
+    /**
+     * Flushes all compilations, shuts the compilation queue down and awaits its termination with
+     * the given timeout.
+     */
     public void shutdownAndAwaitTermination(long timeout) {
-        final ExecutorService threadPool;
-        synchronized (this) {
-            threadPool = compilationExecutorService;
-            if (threadPool == null) {
-                shutdown = true;
-                return;
+        flush(null);
+        shutdownNow();
+        awaitTermination(timeout);
+    }
+
+    private void shutdownNow() {
+        TruffleThreadPoolExecutor e = this.executor;
+        if (e == null) {
+            synchronized (this) {
+                e = executor;
+                if (e == null) {
+                    shutdown = true;
+                    return;
+                }
             }
         }
-        threadPool.shutdownNow();
+        e.shutdownNow();
+    }
+
+    private void awaitTermination(long timeout) {
+        TruffleThreadPoolExecutor e = this.executor;
+        if (e == null) {
+            return;
+        }
         try {
-            threadPool.awaitTermination(timeout, TimeUnit.MILLISECONDS);
-        } catch (InterruptedException e) {
-            throw new RuntimeException("Could not terminate compiler threads. Check if there are runaway compilations that don't handle Thread#interrupt.", e);
+            e.awaitTermination(timeout, TimeUnit.MILLISECONDS);
+        } catch (InterruptedException ex) {
+            throw new RuntimeException("Waiting for compiler threads was interrupted.", ex);
         }
     }
 
@@ -258,7 +300,7 @@ public class BackgroundCompileQueue {
         // nop
     }
 
-    static class Priority {
+    static final class Priority {
 
         public static final Priority INITIALIZATION = new Priority(0, Tier.INITIALIZATION);
         final Tier tier;
@@ -277,15 +319,83 @@ public class BackgroundCompileQueue {
 
     }
 
-    private final class TruffleThreadPoolExecutor extends ThreadPoolExecutor {
-        private TruffleThreadPoolExecutor(int corePoolSize, int maximumPoolSize, long keepAliveTime, TimeUnit unit, BlockingQueue<Runnable> workQueue, ThreadFactory threadFactory) {
+    private static final class TruffleThreadPoolExecutor extends ThreadPoolExecutor {
+
+        /*
+         * Its somehow wasteful to store all compilations in another set, but since the executor is
+         * in charge of polling the queue, it is difficult to otherwise see a consistent view of all
+         * queued and active compilations without duplicates and misses.
+         */
+        private final Set<CompilationTask.ExecutorServiceWrapper> allTargets = ConcurrentHashMap.newKeySet();
+        private final DynamicCompilationThresholds dynamicCompilationThresholds;
+
+        private TruffleThreadPoolExecutor(int corePoolSize, int maximumPoolSize, long keepAliveTime, TimeUnit unit, BlockingQueue<Runnable> workQueue, ThreadFactory threadFactory,
+                        DynamicCompilationThresholds dynamicCompilationThresholds) {
             super(corePoolSize, maximumPoolSize, keepAliveTime, unit, workQueue, threadFactory);
+            this.dynamicCompilationThresholds = dynamicCompilationThresholds;
+        }
+
+        void flush(EngineData engine) {
+            for (OptimizedCallTarget target : getAllTargets(engine)) {
+                target.cancelCompilation("Polyglot engine was closed.");
+            }
+        }
+
+        Collection<OptimizedCallTarget> getQueuedTargets(EngineData engine) {
+            return extractTargets(engine, getQueue().toArray(CompilationTask.ExecutorServiceWrapper[]::new));
+        }
+
+        Collection<OptimizedCallTarget> getAllTargets(EngineData engine) {
+            return extractTargets(engine, allTargets.toArray(CompilationTask.ExecutorServiceWrapper[]::new));
+        }
+
+        private static Collection<OptimizedCallTarget> extractTargets(EngineData engine, CompilationTask.ExecutorServiceWrapper[] serviceWrappers) {
+            List<OptimizedCallTarget> queuedTargets = new ArrayList<>();
+            for (CompilationTask.ExecutorServiceWrapper wrapper : serviceWrappers) {
+                OptimizedCallTarget target = wrapper.compileTask.targetRef.get();
+                if (target != null && (engine == null || target.engine == engine)) {
+                    queuedTargets.add(target);
+                }
+            }
+            return Collections.unmodifiableCollection(queuedTargets);
         }
 
         @Override
         @SuppressWarnings({"unchecked"})
         protected <T> RunnableFuture<T> newTaskFor(Callable<T> callable) {
-            return (RunnableFuture<T>) new CompilationTask.ExecutorServiceWrapper((CompilationTask) callable);
+            ExecutorServiceWrapper wrapper = new ExecutorServiceWrapper((CompilationTask) callable);
+            allTargets.add(wrapper);
+            return (RunnableFuture<T>) wrapper;
+        }
+
+        @Override
+        public boolean remove(Runnable task) {
+            allTargets.remove(task);
+            return super.remove(task);
+        }
+
+        @Override
+        public <T> Future<T> submit(Callable<T> task) {
+            Future<T> future = super.submit(task);
+            scaleThresholds();
+            return future;
+        }
+
+        private void scaleThresholds() {
+            if (dynamicCompilationThresholds != null) {
+                dynamicCompilationThresholds.scaleThresholds();
+            }
+        }
+
+        @Override
+        protected void beforeExecute(Thread t, Runnable r) {
+            scaleThresholds();
+        }
+
+        @Override
+        protected void afterExecute(Runnable r, Throwable t) {
+            super.afterExecute(r, t);
+            allTargets.remove(r);
         }
 
         @Override
@@ -328,7 +438,7 @@ public class BackgroundCompileQueue {
                     try (AutoCloseable compilerThreadScope = runtime.openCompilerThreadScope();
                                     AutoCloseable polyglotThreadScope = OptimizedRuntimeAccessor.ENGINE.createPolyglotThreadScope()) {
                         super.run();
-                        if (compilationExecutorService.allowsCoreThreadTimeOut()) {
+                        if (executor.allowsCoreThreadTimeOut()) {
                             // If core threads are always kept alive (no timeout), the
                             // IdlingPriorityBlockingQueue.take mechanism is used instead.
                             notifyIdleCompilerThread();
@@ -385,7 +495,7 @@ public class BackgroundCompileQueue {
     private final class IdlingPriorityBlockingQueue<E> extends PriorityBlockingQueue<E> {
         @Override
         public E take() throws InterruptedException {
-            while (!compilationExecutorService.allowsCoreThreadTimeOut()) {
+            while (!executor.allowsCoreThreadTimeOut()) {
                 E elem = poll(delayMillis, TimeUnit.MILLISECONDS);
                 if (elem == null) {
                     notifyIdleCompilerThread();
@@ -413,7 +523,7 @@ public class BackgroundCompileQueue {
     private final class IdlingLinkedBlockingDeque<E> extends LinkedBlockingDeque<E> {
         @Override
         public E takeFirst() throws InterruptedException {
-            while (!compilationExecutorService.allowsCoreThreadTimeOut()) {
+            while (!executor.allowsCoreThreadTimeOut()) {
                 E elem = poll(delayMillis, TimeUnit.MILLISECONDS);
                 if (elem == null) {
                     notifyIdleCompilerThread();
@@ -441,6 +551,41 @@ public class BackgroundCompileQueue {
                 timeoutMillis -= delayMillis;
             }
             return super.pollFirst(timeoutMillis, TimeUnit.MILLISECONDS);
+        }
+    }
+
+    private final class DynamicCompilationThresholds {
+        private final int threads;
+        private final double minScale;
+        private final int minNormalLoad;
+        private final int maxNormalLoad;
+        private final double slope;
+
+        DynamicCompilationThresholds(int threads, double minScale, int minNormalLoad, int maxNormalLoad) {
+            this.threads = threads;
+            this.minScale = minScale;
+            this.minNormalLoad = minNormalLoad;
+            this.maxNormalLoad = maxNormalLoad;
+            this.slope = (1 - minScale) / minNormalLoad;
+        }
+
+        private double load() {
+            return (double) getQueueSize() / threads;
+        }
+
+        private double scale() {
+            double x = load();
+            if (minNormalLoad <= x && x <= maxNormalLoad) {
+                return 1;
+            }
+            if (x < minNormalLoad) {
+                return slope * x + minScale;
+            }
+            return slope * x + (1 - slope * maxNormalLoad);
+        }
+
+        private void scaleThresholds() {
+            OptimizedTruffleRuntime.getRuntime().setCompilationThresholdScale(FixedPointMath.toFixedPoint(scale()));
         }
     }
 }
